test suits added & swagger issue fixed for ID fields
