# src/routes/orders.routes.ts
@@ -1,0 +1,8 @@
+import { Router } from "express";
+import { getUserOrders } from "../controllers/orders.controller";
+
+const router = Router();
+
+router.get("/:userId", getUserOrders);
+
+export default router;
